[package]
name = "client-ghostmates"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
serde_json = { version = "1.0" }
serde = {version = "1.0", features=["derive"] }
paillier = { version = "0.2.0" }
rand = "0.8.4"
futures_codec = "0.4.1"
futures = "0.3.16"
ghostmates-common = { path = "../ghostmates-common" }
clap = "3.0.0-beta.4"
sodiumoxide = "0.2.7"
dirs="3.0.2"
sha2="0.9.5"
ripemd160="0.9.1"
base58="0.1.0"
